--- a/recipes/Llama-3.2-1B-Instruct/best_of_n.yaml
+++ b/recipes/Llama-3.2-1B-Instruct/best_of_n.yaml
@@ -2,8 +2,8 @@
 
 approach: best_of_n
 n: 4
-search_batch_size: 25
+search_batch_size: 50
 sort_completed: true
 filter_duplicates: true
-num_samples: 10         # REMOVE THIS LINE TO RUN ON THE WHOLE DATASET
+# num_samples: 10         # REMOVE THIS LINE TO RUN ON THE WHOLE DATASET
 seed: 0
