--- a/recipes/qwen-math-8/beam_search.yaml
+++ b/recipes/qwen-math-8/beam_search.yaml
@@ -1,6 +1,6 @@
 # refer to src/sal/config.py for more options
 
-model_path: Triangle104/Qwen2.5-Math-7B-Q8_0-GGUF
+model_path: /vol/bitbucket/km1124/search-and-learn/models/qwen2.5-math-7b-gguf/qwen2.5-math-7b-q8_0.gguf
 filter_duplicates: true
 approach: beam_search
 n: 4
