--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
   "ruff>=0.12.0",
   "torch>=2.7.0",
   "torchvision>=0.22.0",
+  "wandb>=0.21.0",
   "word2number>=1.1",
 ]
 description = "Add your description here"
