--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
   "pebble>=5.1.1",
   "pytest>=8.4.1",
   "python-dotenv>=1.1.1",
+  "regex>=2024.11.6",
   "rich>=14.0.0",
   "ruff>=0.12.0",
   "torch>=2.7.0",
