--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
   "regex>=2024.11.6",
   "rich>=14.0.0",
   "ruff>=0.12.0",
+  "tensorboard>=2.20.0",
   "torch>=2.7.0",
   "torchvision>=0.22.0",
   "wandb>=0.21.0",
