--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,5 +32,6 @@ trl = {git = "https://github.com/huggingface/trl.git"}
 [dependency-groups]
 deploy = [
   "matplotlib>=3.10.3",
+  "nvidia-ml-py>=12.575.51",
   "vllm",
 ]
