--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,13 @@ readme = "README.md"
 requires-python = ">=3.11"
 version = "0.1.0"
 
+[build-system]
+build-backend = "hatchling.build"
+requires = ["hatchling"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/sal"]
+
 [tool.uv.sources]
 search-and-learn = {workspace = true}
 trl = {git = "https://github.com/huggingface/trl.git"}
