--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,5 +41,6 @@ trl = {git = "https://github.com/huggingface/trl.git"}
 deploy = [
   "matplotlib>=3.10.3",
   "nvidia-ml-py>=12.575.51",
+  "transformers<4.54.0",
   "vllm==0.9.2",
 ]
