--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ dependencies = [
   "fastapi>=0.115.13",
   "isort>=6.0.1",
   "latex2sympy2>=1.9.1",
+  "matplotlib>=3.10.3",
   "pebble>=5.1.1",
   "pyrootutils>=1.0.4",
   "pytest>=8.4.1",
