--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,9 @@ trl = {git = "https://github.com/huggingface/trl.git"}
 
 [dependency-groups]
 deploy = [
+  "editables>=0.5",
+  "flash-attn>=2.8.2",
+  "hatchling>=1.27.0",
   "matplotlib>=3.10.3",
   "nvidia-ml-py>=12.575.51",
   "transformers<4.54.0",
