--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 dependencies = [
   "accelerate>=1.8.0",
   "datasets>=3.6.0",
+  "click>=8.1.7",
   "fabric>=3.2.2",
   "fastapi>=0.115.13",
   "isort>=6.0.1",
