--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
   "torchvision>=0.22.0",
   "wandb>=0.21.0",
   "word2number>=1.1",
+  "scipy>=1.16.1",
 ]
 
 description = "Add your description here"
