--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
   "wandb>=0.21.0",
   "word2number>=1.1",
   "scipy>=1.16.1",
+  "scikit-learn>=1.7.1",
 ]
 
 description = "Add your description here"
